update AWS deployment architecture